# ravApp

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
ravApp/: manage.py  pytest.ini  tasks.py
ravApp/auth/: apps.py  serializers.py  tests.py  urls.py  views.py
ravApp/celery_backup/: tasks.py
ravApp/crudapp/: serializers.py  urls.py  utils.py  views.py
ravApp/crudapp/tests/: test_models.py  test_views.py
ravApp/fixtures/: item.py  user.py
ravApp/ravApp/: asgi.py  settings.py  tests_settings.py  urls.py  wsgi.py
